connect product and gateway, init db
