# services/core/domain/product/input_model.go
@@ -1,0 +1,10 @@
+package product
+
+type GetProductDetailInp struct {
+	UserID    string
+	ProductID int64
+}
+
+type GetRecommendationForUserInp struct {
+	UserID string
+}
