# services/core/domain/product/model.go
@@ -1,0 +1,8 @@
+package product
+
+type Product struct {
+	ProductID int64
+	Name      string
+	Price     float64
+	// add more fields here
+}
